# ibus-table-chinese

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.in  ChangeLog.prev  Makefile.am  NEWS  README  RELEASE-NOTES.txt  aclocal.m4  configure.ac  ibus-table-cangcan.spec.in  ibus-table-cangjie.spec.in
Modules/: ManageString.cmake  ManageVariable.cmake  ManageVersion.cmake  PackRPM.cmake  PackSource.cmake  UseFedpkg.cmake  UseUninstall.cmake
SPECS/: RPM-ChangeLog.prev  project.spec.in
icons/: Makefile.am
m4/: Makefile.am
tables/: CMakeLists.txt  Makefile.am  array-big.head  array.head  array30_27489.txt  array30_ExtB.txt  cangjie-big.txt  cangjie3.txt  cangjie5.txt  cantonhk.txt  erbi.txt  erbi_qs.txt  jyutping.txt  quick-classic.txt  quick5.txt  stroke5.txt  wu.txt  xinhua-ibus.txt  yong-ibus.txt  zhengma.txt  zhuyin-big.txt  zhuyin.txt  ziranma.txt
tables/array/: CMakeLists.txt  array-big.head  array30-big.head  array30.head  array30.head.common  array30.head.in  array30.tail  array30_ExtCD_V2012A.txt
tables/cangjie/: CMakeLists.txt  cangjie-big.txt  cangjie3.txt  cangjie5.txt
tables/cantonese/: CMakeLists.txt  cantonese.txt  cantonhk.txt  cantonyale.txt  jyutping.txt  unicode_to_jyutping_table.pl
tables/easy/: CMakeLists.txt  easy-big.txt
tables/erbi/: CMakeLists.txt  erbi-qs.txt  erbi.txt
tables/quick/: CMakeLists.txt  quick-classic.txt  quick3.txt  quick5.txt
tables/scj/: CMakeLists.txt  scj6.txt
tables/stroke5/: CMakeLists.txt  stroke5.txt
tables/wu/: CMakeLists.txt  wu.txt
tables/wubi-haifeng/: CJKa.tab  CMakeLists.txt  COPYING  GBK.tab  GBSimplified.tab  README  Symbol.tab  Word.tab  convertTable.sh  wubi-haifeng86.UTF-8  wubi-haifeng86.head  wubi-haifeng86.tail  wubi-haifeng86.txt
tables/wubi-heifeng/: CJKb.tab  CJKs.tab  Word.tab
tables/wubi-jidian/: CMakeLists.txt  wubi-jidian86.txt  wubi86-jidian.txt
tables/yong/: CMakeLists.txt  yong.txt
