# vim:set ts=4
#
# ibus-table-cangjie - The Cang Jie and derived tables for IBus Table
#
# Copyright (c) 2008-2010 Yu Yuwei <acevery@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

icons_DATA = 

if IBUS_TABLE_BUILD_CANGJIE3
icons_DATA += cangjie3.svg
endif

if IBUS_TABLE_BUILD_CANGJIE5
icons_DATA += cangjie5.svg
endif

if IBUS_TABLE_BUILD_CANGJIEBIG
icons_DATA += cangjie-big.png
endif

if IBUS_TABLE_BUILD_SCJ6
icons_DATA += scj6.svg
endif

if IBUS_TABLE_BUILD_QUICK3
icons_DATA += quick3.png
endif

if IBUS_TABLE_BUILD_QUICK5
icons_DATA += quick5.png
endif

if IBUS_TABLE_BUILD_QUICKCLASSIC
icons_DATA += quick-classic.png
endif

if IBUS_TABLE_BUILD_EASYBIG
icons_DATA += easy-big.png
endif

icons_DATA += $(NULL)

EXTRA_DIST = \
	cangjie3.svg \
	cangjie5.svg \
	cangjie-big.png \
	scj6.svg \
	quick3.png \
	quick5.png \
	quick-classic.png \
	easy-big.png \
	$(NULL)

iconsdir = $(datadir)/ibus-table/icons
