# vim:set ts=4
#
# ibus-table-chinese - Chinese tables for IBus-Table
#
# Copyright (c) 2008-2010 Yu Yuwei <acevery@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

icons_DATA = 

if IBUS_TABLE_BUILD_CANGJIE3
icons_DATA += cangjie3.svg
endif

if IBUS_TABLE_BUILD_CANGJIE5
icons_DATA += cangjie5.svg
endif

if IBUS_TABLE_BUILD_CANGJIEBIG
icons_DATA += cangjie-big.png
endif

if IBUS_TABLE_BUILD_SCJ6
icons_DATA += scj6.svg
endif

if IBUS_TABLE_BUILD_QUICK3
icons_DATA += quick3.png
endif

if IBUS_TABLE_BUILD_QUICK5
icons_DATA += quick5.png
endif

if IBUS_TABLE_BUILD_QUICKCLASSIC
icons_DATA += quick-classic.png
endif

if IBUS_TABLE_BUILD_EASYBIG
icons_DATA += easy-big.png
endif

if IBUS_TABLE_BUILD_CANTONESE
icons_DATA += cantonese.png
endif

if IBUS_TABLE_BUILD_CANTONHK
icons_DATA += cantonhk.png
endif

if IBUS_TABLE_BUILD_JYUTPING
icons_DATA += jyutping.png
endif

if IBUS_TABLE_BUILD_STROKE5
icons_DATA += stroke5.png
endif

if IBUS_TABLE_BUILD_WUBI86
icons_DATA += wubi86.svg
endif

if IBUS_TABLE_BUILD_XINHUA
icons_DATA += xinhua.png
endif

if IBUS_TABLE_BUILD_ZHENGMA
icons_DATA += zhengma.svg
endif

if IBUS_TABLE_BUILD_ERBI
icons_DATA += erbi.png
endif

if IBUS_TABLE_BUILD_ERBIQS
icons_DATA += erbi-qs.svg
endif

if IBUS_TABLE_BUILD_WU
icons_DATA += wu.png
endif

if IBUS_TABLE_BUILD_YONG
icons_DATA += yong.png
endif

if IBUS_TABLE_BUILD_ZHUYIN
icons_DATA += zhuyin.png
endif

if IBUS_TABLE_BUILD_ZHUYINBIG
icons_DATA += zhuyin-big.png
endif

if IBUS_TABLE_BUILD_ZIRANMA
icons_DATA += ziranma.png
endif

icons_DATA += $(NULL)

EXTRA_DIST = \
	cangjie3.svg \
	cangjie5.svg \
	cangjie-big.png \
	scj6.svg \
	quick3.png \
	quick5.png \
	quick-classic.png \
	easy-big.png \
        cantonese.png \
        cantonhk.png \
        jyutping.png \
	stroke5.png \
	wubi86.svg \
	xinhua.png \
	zhengma.svg \
        erbi.png \
        erbi-qs.svg \
        wu.png \
        yong.png \
        zhuyin.png \
        zhuyin-big.png \
        ziranma.png \
	$(NULL)

iconsdir = $(datadir)/ibus-table/icons
